@@ -38,6 +38,7 @@
   [#22785] ATMega644P Support Missing from avr/include/avr/sleep.h
   [#22828] eeprom_write_block(): incompatibility in args order
   [#22834] ATmega164P/324P/644P/1284P lack BODS/BODSE bits in MCUCR
+  [#22870] Error in wdt.h and ATmega164P
 
 
 * Other changes:
